# syspro-algorithms

./: .clang-format  .clangd  .gitignore  README.md
bigint/: README.md  div.cc  meson.build  mul.cc  number.cc  number.hh  testing.hh
bigint/tex/: Makefile  main.tex  preamble.tex
binaryIndexedTree/: CreateSortedArrayThroughInstructions.scala
binomial_heap/: binomial_heap.hh  tests.cc
bisect/: README.md  main.go
bloom/: main.cc
bloomFilter/: Makefile
bloom_filter/: main.cc
dp/: DungeonGame.scala  RegularExpressionMatching.scala  UniqueBinarySearchTrees.scala
dp/NumberOfTopoligicalOrderings/: build.sbt
dp/NumberOfTopoligicalOrderings/src/main/scala/: Main.scala  Node.scala
dp/NumberOfTopologicalOrderings/proof/: Makefile  main.tex
dp/NumberOfTopologicalOrderings/src/main/scala/: Naive.scala  Polynomial.scala
graphs/: Prims.scala  RedundantConnection.scala  RedundantConnection2.scala  isBipartite.cc  topsort.cc
graphs/scc/: kosaraju.scala  lectureExample.in
greedy/: BestTimeToBuyAndSellStock.scala  JumpGame.scala  Planning.scala
hashTables/: maxFreqStack.cc
hashTables/hashmap/: hashmap.rs  linked_list.rs  universal_hashing.rs
heaps/: BinomialHeap.scala  k_sorted_lists.c  mergeSortedLists.cc  minstack.cpp
heaps/binomial_heap/: binomial_heap.hh  meson.build  tests.cc
linkedLists/: cycle.c
linked_list/: a.out  cycle.c  reverse.c
matrixMultiplication/: README.md  matrix.c  meson.build
matrix_multiplication/: README.md  graph.plot  main.c  matrix.h  meson.build  print.py  tests.cc
persistency/: PersistentQueue.scala  PersistentSegmentTree.scala
reversePolishNotation/: Parse.hs  rpn.cabal
reverse_polish_notation/: Main.hs  Parse.hs  RPN.hs
segtree/: CountOfSmallerNumbersAfterSelf.scala  RangeSumQuery.scala
sorts/: countInversions.c  count_inversions.c  hIndex.cc  inplaceMergeSort.c  inplace_merge_sort.c  meson.build  orderStat.c  order_stat.c  partitionComparison.c  partition_comparison.c  print.py  quicksort.c  sort_colors.c  string_radix_sort.c  wiggleSort.cc  wiggle_sort.cc
spamFilter/: go.mod  spamfilter.go  spamfilter_test.go
stack/: minstack.cc
trees/: AVL.hs  SerializeDeserializeTree.scala  ValidateBst.scala  balance_tree.scala  right_side_view.scala
trees/treap/: build.sbt
trees/treap/src/main/scala/: Treap.scala
trees/treap/src/test/scala/: Treap.scala
tsp/: bellmanHeldKarp.cc  bellmanHeldKarp.hh  graph.cc  graph.hh  main.cc  meson.build  naive.cc  naive.hh  set.cc  set.hh  setTests.cc  util.hh
