cabal-version:      3.0
name:               reverse-polish-notation
version:            0.0.1
build-type:         Simple

common warnings
    ghc-options: -Wall

executable rpn
    import: warnings
    main-is: Main.hs
    other-modules:
        Parse,
        RPN,
    build-depends:
        base,
        haskeline,
        parsec,
    hs-source-dirs:   .
    default-language: Haskell2010
